--- a/package.json
+++ b/package.json
@@ -1,26 +1,43 @@
 {
-  "name": "master-electron",
+  "name": "Disfunction-Browser",
   "version": "1.0.0",
   "description": "Master Electron Course Code",
   "main": "main.js",
   "scripts": {
     "start": "electron .",
     "watch": "nodemon --exec 'electron .'",
-    "reset": "git reset --hard"
+    "reset": "git reset --hard",
+    "build": "electron-builder --help "
   },
   "repository": "https://github.com/stackacademytv/master-electron",
+  "homepage": "https://github.com/stackacademytv/master-electron",
   "keywords": [
     "Electron",
     "Master Electron",
     "demo"
   ],
-  "author": "GitHub, Stackacademytv",
+  "author": "Oscar Zhang",
   "license": "CC0-1.0",
   "devDependencies": {
     "electron": "^5.0.10",
+    "electron-builder": "^21.2.0",
     "nodemon": "^1.19.2"
   },
   "dependencies": {
     "electron-window-state": "^5.0.3"
+  },
+  "build": {
+    "appId": "com.oscar.disfunctionbrowser",
+    "copyright": "Copyright 2019 Oscar Zhang",
+    "mac": {
+      "category": "public.app-category.productivity",
+      "target": "dmg"
+    },
+    "win": {
+      "target": "zip"
+    },
+    "linux": {
+      "category": "Utility"
+    }
   }
 }
